Fiz mais vários avanços, ams ainda cho muito estronha a deicisão do IFood de Option guardar um OptionParentId, parece errado